Fix preloader z-index

--- a/src/styles/preloader.scss
+++ b/src/styles/preloader.scss
@@ -53,6 +53,7 @@
       100% {
         opacity: 0;
         pointer-events: none;
+        z-index: -100;
       }
     }
   }
